History of changes of the RapidMiner versions
====================================================

Changes from RapidMiner 5.2.8 to 5.2.9
--------------------------------------
* Added first wave of new and improved extensive documentation (often including tutorial processes) for many operators.
* Added improved RapidAnalytics support. New run button: "Run process on RapidAnalytics".
  Can only be used if the process is stored on a RapidAnalytics repository.
  Instantly runs the process on the RapidAnalytics server the process is stored on.
* New operator: Throw Exception
* New file system operators: Copy File, Move File, Delete File, Rename File, Create Directory
* Aggregate: new aggregation functions: sum (fractional), count (fractional), count (percentage) and string concatenation
* Result Perspective: Added button in top right corner of a result tab to close all open results at once
* Preferences menu buttons reworked: 'OK' button saves settings permanently and closes the dialog; 
  'Apply' button saves settings permanently and does not close the dialog
* Generate Data: warn user if the selected number of attributes is not supported by the target function
* The RM window title now shows the complete location of the current process to avoid confusion with multiple processes with the same name
* Trying to create a new process/open another process/exit RM while a process is running now requires user confirmation
* Local repositories which are inaccessible for any reason now have an annotation which shows that they are inaccessible
* Improved many error messages
* 'Remote' repositories are now called 'RapidAnalytics' repositories.
* Plugin loading: when loading manually installed plugins from the webstart or plugins folder with multiple versions, 
  load the one with the highest version number
* Added database metadata caching to improve performance. If you need to clear the cache, 
  use the menu item 'Clear Database Metadata Cache' under the 'Tools' menu.