@@ -63,6 +63,10 @@ gui.dockkey.operator_documentation_browser.name = Help
 gui.dockkey.operator_documentation_browser.icon = help2.png
 gui.dockkey.operator_documentation_browser.tip  = Displays a help text for the current operator.  
 
+gui.dockkey.macro_viewer.name = Macros
+gui.dockkey.macro_viewer.icon = keyboard_key.png
+gui.dockkey.macro_viewer.tip  = Displays the current content of the defined macros and allows to edit their values.  
+
 gui.dialog.error.operator_documentation_error.message = <html><head></head><body><h2>Error</h2>Failed to load operator documentation\: <br /><span style\="color\: red">{0}</span></body></html>       
 
 gui.dockkey.system_monitor.name = System Monitor
